Test/#89 stompService 테스트및 리펙토링 (#97)
* test: stompService 채팅방 관련 메서드 테스트 완료

* test: stompService 채팅 관련 메서드 중 채팅 리스트 조회 테스트 완료

* test: stompService 채팅 관련 메서드 테스트 완료

* chore: 상대방 차단 시 테스트케이스 정리

* test: 사용자 탈퇴 테스트 까지 테스트 완료

* chore: 머지 이후 실패 테스트 수정

* refactor: 테스트 이름 리펙토링

* chore: user tab character 체크

* chore: 필요없는 import 삭제

* chore: stomService 중복 테스트 제거

* chore:주석 제거

* feat: 회원 탈퇴 시 StompService 호출

---------

Co-authored-by: kariskan <zkfzpf56@naver.com>