@@ -58,21 +58,14 @@ class ChatRoomServiceTest {
 		@Test
 		void successToGetChatRoomListIncludingUser() {
 			// given
-			User user = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User user = createUser("uni", 1L);
 			userRepository.save(user);
 
-			for (long i = 0; i < 5; i++) {
+			for (Integer i = 0; i < 5; i++) {
 				chatRoomRepository.save(ChatRoom.builder()
-					.chatRoomNo(i)
+					.chatRoomNo(i.longValue())
 					.lastModifiedDate(new Date())
-					.participants(List.of(new Participant(user, new Date(), Blocked.UNBLOCK)))
+					.participants(Arrays.asList(new Participant(user, new Date(), Blocked.UNBLOCK)))
 					.createdDate(new Date())
 					.build());
 			}
@@ -88,14 +81,7 @@ class ChatRoomServiceTest {
 		@Test
 		void successToGetEmptyChatRoomList() {
 			// given
-			User user = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User user = createUser("uni", 1L);
 			userRepository.save(user);
 
 			// when
@@ -115,20 +101,13 @@ class ChatRoomServiceTest {
 		@Test
 		void successGetChatRoomByChatRoomNo() {
 			// given
-			User user = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User user = createUser("uni", 1L);
 			userRepository.save(user);
 
 			ChatRoom chatRoom = ChatRoom.builder()
 				.chatRoomNo(1L)
 				.lastModifiedDate(new Date())
-				.participants(List.of(new Participant(user, new Date(), Blocked.UNBLOCK)))
+				.participants(Arrays.asList(new Participant(user, new Date(), Blocked.UNBLOCK)))
 				.createdDate(new Date())
 				.build();
 			chatRoomRepository.save(chatRoom);
@@ -145,14 +124,7 @@ class ChatRoomServiceTest {
 		@Test
 		void failGetChatRoomByChatRoomNo() {
 			// given
-			User user = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User user = createUser("uni", 1L);
 			userRepository.save(user);
 
 			// when & then
@@ -174,31 +146,17 @@ class ChatRoomServiceTest {
 		@Test
 		void successToGetChatRoom() {
 			// given
-			User userA = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userA = createUser("uni", 1L);
 			userRepository.save(userA);
 
-			User userB = User.builder()
-				.actualUserId(2L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("inu")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userB = createUser("inu", 2L);
 			userRepository.save(userB);
 
 			ChatRoom chatRoom = ChatRoom.builder()
 				.chatRoomNo(1L)
 				.lastModifiedDate(new Date())
-				.participants(Arrays.asList(new Participant(userA, new Date(), Blocked.UNBLOCK),
-					new Participant(userB, new Date(), Blocked.UNBLOCK)))
+				.participants(Arrays.asList(new Participant(userA, null, Blocked.UNBLOCK),
+					new Participant(userB, null, Blocked.UNBLOCK)))
 				.createdDate(new Date())
 				.build();
 			chatRoomRepository.save(chatRoom);
@@ -214,24 +172,10 @@ class ChatRoomServiceTest {
 		@Test
 		void failToGetChatRoom() {
 			// given
-			User userA = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userA = createUser("uni", 1L);
 			userRepository.save(userA);
 
-			User userB = User.builder()
-				.actualUserId(2L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("inu")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userB = createUser("inu", 2L);
 			userRepository.save(userB);
 
 			// when & then
@@ -253,31 +197,17 @@ class ChatRoomServiceTest {
 		@Test
 		void successToGetOptionalChatRoom() {
 			// given
-			User userA = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userA = createUser("uni", 1L);
 			userRepository.save(userA);
 
-			User userB = User.builder()
-				.actualUserId(2L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("inu")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userB = createUser("inu", 2L);
 			userRepository.save(userB);
 
 			ChatRoom chatRoom = ChatRoom.builder()
 				.chatRoomNo(1L)
 				.lastModifiedDate(new Date())
-				.participants(Arrays.asList(new Participant(userA, new Date(), Blocked.UNBLOCK),
-					new Participant(userB, new Date(), Blocked.UNBLOCK)))
+				.participants(Arrays.asList(new Participant(userA, null, Blocked.UNBLOCK),
+					new Participant(userB, null, Blocked.UNBLOCK)))
 				.createdDate(new Date())
 				.build();
 			chatRoomRepository.save(chatRoom);
@@ -295,24 +225,10 @@ class ChatRoomServiceTest {
 		@Test
 		void successToFindEmptyChatRoom() {
 			// given
-			User userA = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userA = createUser("uni", 1L);
 			userRepository.save(userA);
 
-			User userB = User.builder()
-				.actualUserId(2L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("inu")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userB = createUser("inu", 2L);
 			userRepository.save(userB);
 
 			// when
@@ -331,24 +247,10 @@ class ChatRoomServiceTest {
 		@Test
 		void successToSaveChatRoom() {
 			// given
-			User userA = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userA = createUser("uni", 1L);
 			userRepository.save(userA);
 
-			User userB = User.builder()
-				.actualUserId(2L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("inu")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userB = createUser("inu", 2L);
 			userRepository.save(userB);
 
 			// when
@@ -363,31 +265,17 @@ class ChatRoomServiceTest {
 		@Test
 		void failToSaveChatRoom() {
 			// given
-			User userA = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userA = createUser("uni", 1L);
 			userRepository.save(userA);
 
-			User userB = User.builder()
-				.actualUserId(2L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("inu")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userB = createUser("inu", 2L);
 			userRepository.save(userB);
 
 			ChatRoom chatRoom = ChatRoom.builder()
 				.chatRoomNo(1L)
 				.lastModifiedDate(new Date())
-				.participants(Arrays.asList(new Participant(userA, new Date(), Blocked.UNBLOCK),
-					new Participant(userB, new Date(), Blocked.UNBLOCK)))
+				.participants(Arrays.asList(new Participant(userA, null, Blocked.UNBLOCK),
+					new Participant(userB, null, Blocked.UNBLOCK)))
 				.createdDate(new Date())
 				.build();
 			chatRoomRepository.save(chatRoom);
@@ -413,31 +301,17 @@ class ChatRoomServiceTest {
 		@Test
 		void successToUpdateLastModifiedDate() {
 			// given
-			User userA = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userA = createUser("uni", 1L);
 			userRepository.save(userA);
 
-			User userB = User.builder()
-				.actualUserId(2L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("inu")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userB = createUser("inu", 2L);
 			userRepository.save(userB);
 
 			ChatRoom chatRoom = ChatRoom.builder()
 				.chatRoomNo(1L)
 				.lastModifiedDate(new Date())
-				.participants(Arrays.asList(new Participant(userA, new Date(), Blocked.UNBLOCK),
-					new Participant(userB, new Date(), Blocked.UNBLOCK)))
+				.participants(Arrays.asList(new Participant(userA, null, Blocked.UNBLOCK),
+					new Participant(userB, null, Blocked.UNBLOCK)))
 				.createdDate(new Date())
 				.build();
 			chatRoomRepository.save(chatRoom);
@@ -456,31 +330,17 @@ class ChatRoomServiceTest {
 		@Test
 		void successToUpdateBlockInfo() {
 			// given
-			User userA = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userA = createUser("uni", 1L);
 			userRepository.save(userA);
 
-			User userB = User.builder()
-				.actualUserId(2L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("inu")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User userB = createUser("inu", 2L);
 			userRepository.save(userB);
 
 			ChatRoom chatRoom = ChatRoom.builder()
 				.chatRoomNo(1L)
 				.lastModifiedDate(new Date())
-				.participants(Arrays.asList(new Participant(userA, new Date(), Blocked.UNBLOCK),
-					new Participant(userB, new Date(), Blocked.UNBLOCK)))
+				.participants(Arrays.asList(new Participant(userA, null, Blocked.UNBLOCK),
+					new Participant(userB, null, Blocked.UNBLOCK)))
 				.createdDate(new Date())
 				.build();
 			chatRoomRepository.save(chatRoom);
@@ -505,20 +365,13 @@ class ChatRoomServiceTest {
 		@Test
 		void successToDeleteChatRoom() {
 			// given
-			User user = User.builder()
-				.actualUserId(1L)
-				.tier(Tier.gold)
-				.division(3)
-				.name("uni")
-				.tagLine("tag")
-				.status(Status.ONLINE)
-				.lp(3L).build();
+			User user = createUser("uni", 1L);
 			userRepository.save(user);
 
 			ChatRoom chatRoom = ChatRoom.builder()
 				.chatRoomNo(1L)
 				.lastModifiedDate(new Date())
-				.participants(List.of(new Participant(user, new Date(), Blocked.UNBLOCK)))
+				.participants(Arrays.asList(new Participant(user, null, Blocked.UNBLOCK)))
 				.createdDate(new Date())
 				.build();
 			chatRoomRepository.save(chatRoom);
@@ -530,4 +383,16 @@ class ChatRoomServiceTest {
 			assertThat(chatRoomRepository.findByChatRoomNo(1L)).isEmpty();
 		}
 	}
+
+	public User createUser(String name, Long actualUserId) {
+		return User.builder()
+			.actualUserId(actualUserId)
+			.tier(Tier.gold)
+			.division(3)
+			.name(name)
+			.tagLine("tagLine")
+			.status(Status.ONLINE).lp(3L)
+			.build();
+	}
+
 }
